--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+body {
+  color: #323232;
+  background-color: #cbe8f2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  color: #323232;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:hover{
+  color: #323232;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-primary{
+  background-color: #87dfd6;
+  border-color: #87dfd6;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-primary:hover{
+  background-color: #01a9b4;
+  border-color: #01a9b4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-title{
+  max-width: 217px;
+  height: 8rem;
+  overflow-y: scroll;
+}
+
+.img-fluid{
+  max-height: 320px;
+}
+
+.row{
+  margin:0;
 }
